--- a/project/report.Rmd
+++ b/project/report.Rmd
@@ -34,7 +34,7 @@ knitr::opts_chunk$set(echo=TRUE)
 
 ```{r load_data_set, include=FALSE}
 columns <- read.table(
-    "../data/kddcup.names",
+    "./data/kddcup.names",
     sep=":",
     skip=1,  # the first column name are the labels, but those are at the end!
     as.is=T
@@ -42,12 +42,35 @@ columns <- read.table(
 column_names <- c(columns[,1], 'label')
 
 connection_events <- read.csv(
-    "../data/kddcup.data_10_percent.gz",
+    "./data/kddcup.data_10_percent.gz",
     col.names=column_names
 )
 
 setDT(connection_events)  # convert from data.frame to data.table
 ```
+
+Set up a common set of k-folds for model validation:
+```{r eval=FALSE}
+k_folds <- createFolds(connection_events$label, k=10)
+```
+
+```{r include=FALSE, eval=FALSE}
+saveRDS(k_folds, file='./data/k-folds.rds')
+```
+
+```{r include=FALSE, eval=TRUE}
+k_folds <- readRDS(file='./data/k-folds.rds')
+```
+
+This generates 10 sets of indices on the data. These are arranged such that similar amounts of each label are in each set.
+
+To use them for k-fold cross-validation:
+
+  1. Pick each fold one at a time.
+  2. Treat this as the indices of the testing set.
+  3. Select all other connection events as the training set.
+  4. Train your model and get your predictions from the test set.
+
 
 Utility Functions:
 ```{r}
@@ -162,18 +185,21 @@ plot_frequency_table <- function(freq_table) {
     return(plot)
 }
 
+# Makes a nice table listing all the classification errors in a confusion
+# matrix (and their frequency):
 get_classification_errors <- function(confusion_matrix) {
     confusion_table <- as.data.table(confusion_matrix)
-    colnames(confusion_table) <- c('predicted', 'true', 'frequency')
+    colnames(confusion_table) <- c('Predicted', 'True', 'Frequency')
     confusion_table[predicted!=true & frequency > 0][order(-frequency)]
 }
 ```
 
-This data helps us to group attack types:
+The taffic labels are grouped by attack type, here we load this mapping in and generate the `attack_categories` data table:
 ```{r}
 attack_categories <- fread(
     './data/training_attack_types',
-    col.names=c('attack', 'category')
+    col.names=c('attack', 'category'),
+    header=FALSE
 )
 # Make these attack names consistent with the main data set
 attack_categories$attack <- sapply(
@@ -189,13 +215,6 @@ attack_categories$category <- sapply(
 attack_categories <- rbind(
     attack_categories,
     list('normal.', 'normal.')
-)
-
-# What is `back`? It isn't defined in the task description
-# or any other documentation I can find.
-attack_categories <- rbind(
-    attack_categories,
-    list('back.', 'dos.')
 )
 ```
 
@@ -546,5 +565,3 @@ plot_log_confusion_matrix(summary_matrix)
 - Train data on random forest, show visualisation.
 - Visualisation shows how we split on "information gain".
 - Analyse performance of baseline model.
-- Can we 
-
