--- a/documentation/daniel-jones-documentation.Rmd
+++ b/documentation/daniel-jones-documentation.Rmd
@@ -1570,4 +1570,4 @@ text(k_means_decision_tree_model)
 sort(k_means_decision_tree_model$variable.importance)
 ```
 
-Here you can see that k-means cluster has not been used. Maybe this is because of the greedy algorithm? Even thoug it is quite good, 
+Here you can see that k-means cluster has not been used. Maybe this is because of the greedy algorithm? Even thoug it is quite good.
